--- a/docs/disease.ipynb
+++ b/docs/disease.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "f8621480",
    "metadata": {},
    "source": [
     "# Disease"
@@ -9,6 +10,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "79adf8d4",
    "metadata": {},
    "source": [
     "lamindb provides access to the following public protein ontologies through [lnschema-bionty](https://github.com/laminlabs/lnschema-bionty):\n",
@@ -16,11 +18,12 @@
     "1. [Mondo](https://mondo.monarchinitiative.org/)\n",
     "2. [Human Disease](https://disease-ontology.org/)\n",
     "\n",
-    "Here we show how to access and search disease ontologies to standardize new data."
+    "Here we show how to access and search Disease ontologies to standardize new data."
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "9063c567",
    "metadata": {},
    "source": [
     "## Setup"
@@ -29,6 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "802c5dc9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,6 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3a8e627f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,6 +52,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f85f5c43",
    "metadata": {},
    "source": [
     "## PublicOntology objects"
@@ -54,23 +60,27 @@
   },
   {
    "cell_type": "markdown",
+   "id": "95bae0d4",
    "metadata": {},
    "source": [
-    "Let us create a public ontology accessor with {meth}`~docs:lnschema_bionty.dev.BioRegistry.public`, which chooses a default public ontology source from {class}`~docs:lnschema_bionty.PublicSource`. It's a [PublicOntology](https://lamin.ai/docs/lnschema_bionty.dev.publicontology) object, which you can think about as a public registry:"
+    "Let us create a public ontology accessor with {meth}`~docs:lnschema_bionty.dev.BioRegistry.public`, which chooses a default public ontology source from {class}`~docs:lnschema_bionty.PublicSource`.\n",
+    "It's a [PublicOntology](https://lamin.ai/docs/lnschema_bionty.dev.publicontology) object, which you can think about as a public registry:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "49025933",
    "metadata": {},
    "outputs": [],
    "source": [
-    "public = lb.Disease.public()\n",
-    "public"
+    "diseases = lb.Disease.public(organism=\"all\")\n",
+    "diseases"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "eaf0ff7c",
    "metadata": {},
    "source": [
     "As for registries, you can export the ontology as a `DataFrame`:"
@@ -79,15 +89,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "78f36278",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = public.df()\n",
+    "df = diseases.df()\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "860846ac",
    "metadata": {},
    "source": [
     "Unlike registries, you can also export it as a Pronto object via `public.ontology`."
@@ -95,6 +107,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2560cd65",
    "metadata": {},
    "source": [
     "## Look up terms"
@@ -102,6 +115,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6377285a",
    "metadata": {},
    "source": [
     "As for registries, terms can be looked up with auto-complete:"
@@ -110,14 +124,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d7183e2b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "lookup = public.lookup()"
+    "lookup = diseases.lookup()"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "b50b03a5",
    "metadata": {},
    "source": [
     "The `.` accessor provides normalized terms (lower case, only contains alphanumeric characters and underscores):"
@@ -126,6 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0ea631a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,6 +151,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "809cadfc",
    "metadata": {},
    "source": [
     "To look up the exact original strings, convert the lookup object to dict and use the `[]` accessor:"
@@ -142,6 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3bbf3b5c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,6 +170,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ab030dd5",
    "metadata": {},
    "source": [
     "By default, the `name` field is used to generate lookup keys. You can specify another field to look up:"
@@ -159,15 +179,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "086b9723",
    "metadata": {},
    "outputs": [],
    "source": [
-    "lookup = public.lookup(public.ontology_id)"
+    "lookup = diseases.lookup(diseases.ontology_id)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e62ef26f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,6 +198,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "43aac4da",
    "metadata": {},
    "source": [
     "## Search terms"
@@ -183,6 +206,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "af5a79fc",
    "metadata": {},
    "source": [
     "Search behaves in the same way as it does for registries:"
@@ -191,14 +215,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "fe8ea0ca",
    "metadata": {},
    "outputs": [],
    "source": [
-    "public.search(\"parkinsons disease\").head(3)"
+    "diseases.search(\"parkinsons disease\").head(3)"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "8feecbea",
    "metadata": {},
    "source": [
     "By default, search also covers synonyms:"
@@ -207,14 +233,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "cd8c0f91",
    "metadata": {},
    "outputs": [],
    "source": [
-    "public.search(\"paralysis agitans\").head(3)"
+    "diseases.search(\"paralysis agitans\").head(3)"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "d4622324",
    "metadata": {},
    "source": [
     "You can turn this off synonym by passing `synonyms_field=None`:"
@@ -223,14 +251,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "848e6a16",
    "metadata": {},
    "outputs": [],
    "source": [
-    "public.search(\"parkinsons disease\", synonyms_field=None).head(3)"
+    "diseases.search(\"paralysis agitans\", synonyms_field=None).head(3)"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "e2256d3e",
    "metadata": {},
    "source": [
     "Search another field (default is `.name`):"
@@ -239,41 +269,45 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d3240da0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "public.search(\n",
+    "diseases.search(\n",
     "    \"progressive degenerative disorder of the central nervous system\",\n",
-    "    field=public.definition,\n",
+    "    field=diseases.definition,\n",
     ").head()"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "e02bcab4",
    "metadata": {},
    "source": [
-    "## Standardize disease identifiers"
+    "## Standardize Disease identifiers"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "e99c09d3",
    "metadata": {},
    "source": [
-    "Let us generate a `DataFrame` that stores a number of disease identifiers, some of which corrupted:"
+    "Let us generate a `DataFrame` that stores a number of Disease identifiers, some of which corrupted:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "51b6f71b",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_orig = pd.DataFrame(\n",
     "    index=[\n",
-    "        \"supraglottis cancer\",\n",
-    "        \"alexia\",\n",
-    "        \"trigonitis\",\n",
-    "        \"paranasal sinus disorder\",\n",
+    "        \"supraglottis cancer\"\n",
+    "        \"alexia\"\n",
+    "        \"trigonitis\"\n",
+    "        \"paranasal sinus disorder\"\n",
     "        \"This disease does not exist\",\n",
     "    ]\n",
     ")\n",
@@ -282,6 +316,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7fb5978f",
    "metadata": {},
    "source": [
     "We can check whether any of our values are validated against the ontology reference:"
@@ -290,15 +325,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "fd000c97",
    "metadata": {},
    "outputs": [],
    "source": [
-    "validated = public.validate(df_orig.index, public.name)\n",
+    "validated = diseases.validate(df_orig.index, diseases.name)\n",
     "df_orig.index[~validated]"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "ce3b39de",
    "metadata": {},
    "source": [
     "## Ontology source versions"
@@ -306,6 +343,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "65323d71",
    "metadata": {},
    "source": [
     "For any given entity, we can choose from a number of versions:"
@@ -314,6 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "462d9788",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,6 +361,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9543c7ce",
    "metadata": {},
    "source": [
     "When instantiating a Bionty object, we can choose a source or version:"
@@ -330,18 +370,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "id": "c4a9c3be",
+   "metadata": {
+    "lines_to_next_cell": 0
+   },
    "outputs": [],
    "source": [
     "public_source = lb.PublicSource.filter(\n",
     "    source=\"mondo\", version=\"2023-04-04\", organism=\"all\"\n",
     ").one()\n",
-    "public = lb.Disease.public(public_source=public_source)\n",
-    "public"
+    "diseases= lb.Disease.public(public_source=public_source)\n",
+    "diseases"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "77996d3f",
    "metadata": {},
    "source": [
     "The currently used ontologies can be displayed using:"
@@ -350,6 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ea723ef3",
    "metadata": {
     "tags": [
      "hide-output"
@@ -363,6 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f6faaec2",
    "metadata": {
     "tags": [
      "hide-cell"
@@ -380,20 +426,8 @@
    "display_name": "lamindb",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 5
 }
