--- a/docs/experimental_factor.ipynb
+++ b/docs/experimental_factor.ipynb
@@ -2,24 +2,27 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "d1f4a420",
    "metadata": {},
    "source": [
-    "# Experimental factor"
+    "# ExperimentalFactor"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "420903d3",
    "metadata": {},
    "source": [
     "lamindb provides access to the following public protein ontologies through [lnschema-bionty](https://github.com/laminlabs/lnschema-bionty):\n",
     "\n",
     "1. [Experimental Factor Ontology](https://www.ebi.ac.uk/ols/ontologies/efo)\n",
     "\n",
-    "Here we show how to access and search experimental factor ontologies to standardize new data."
+    "Here we show how to access and search ExperimentalFactor ontologies to standardize new data."
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "719478be",
    "metadata": {},
    "source": [
     "## Setup"
@@ -28,15 +31,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2bdef861",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!lamin init --storage ./test-experimental-factor --schema bionty"
+    "!lamin init --storage ./test-experimentalfactor --schema bionty"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "478d5f35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,6 +51,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c41ba2a3",
    "metadata": {},
    "source": [
     "## PublicOntology objects"
@@ -53,23 +59,27 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f2227f60",
    "metadata": {},
    "source": [
-    "Let us create a public ontology accessor with {meth}`~lnschema_bionty.dev.BioRegistry.public`, which chooses a default public ontology source from {class}`~lnschema_bionty.PublicSource`. It's a [PublicOntology](https://lamin.ai/docs/lnschema_bionty.dev.publicontology) object, which you can think about as a public registry:"
+    "Let us create a public ontology accessor with {meth}`~docs:lnschema_bionty.dev.BioRegistry.public`, which chooses a default public ontology source from {class}`~docs:lnschema_bionty.PublicSource`.\n",
+    "It's a [PublicOntology](https://lamin.ai/docs/lnschema_bionty.dev.publicontology) object, which you can think about as a public registry:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "75778c8a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "public = lb.ExperimentalFactor.public()\n",
-    "public"
+    "experimentalfactors = lb.ExperimentalFactor.public(organism=\"all\")\n",
+    "experimentalfactors"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "589cb1aa",
    "metadata": {},
    "source": [
     "As for registries, you can export the ontology as a `DataFrame`:"
@@ -78,15 +88,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1a300f5d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = public.df()\n",
+    "df = experimentalfactors.df()\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "fa82506c",
    "metadata": {},
    "source": [
     "Unlike registries, you can also export it as a Pronto object via `public.ontology`."
@@ -94,6 +106,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d4da4d20",
    "metadata": {},
    "source": [
     "## Look up terms"
@@ -101,6 +114,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "87e071ee",
    "metadata": {},
    "source": [
     "As for registries, terms can be looked up with auto-complete:"
@@ -109,14 +123,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d65be07e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "lookup = public.lookup()"
+    "lookup = experimentalfactors.lookup()"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "71f61ba5",
    "metadata": {},
    "source": [
     "The `.` accessor provides normalized terms (lower case, only contains alphanumeric characters and underscores):"
@@ -125,6 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "996b3513",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,6 +150,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b4eec918",
    "metadata": {},
    "source": [
     "To look up the exact original strings, convert the lookup object to dict and use the `[]` accessor:"
@@ -141,6 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "35fe32df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,6 +169,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "85d8987b",
    "metadata": {},
    "source": [
     "By default, the `name` field is used to generate lookup keys. You can specify another field to look up:"
@@ -158,15 +178,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "92798f6b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "lookup = public.lookup(public.ontology_id)"
+    "lookup = experimentalfactors.lookup(experimentalfactors.ontology_id)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "06200062",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,6 +197,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "37645f42",
    "metadata": {},
    "source": [
     "## Search terms"
@@ -182,6 +205,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ef829184",
    "metadata": {},
    "source": [
     "Search behaves in the same way as it does for registries:"
@@ -190,14 +214,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8d8bcdc2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "public.search(\"single-cell rna seq\").head(3)"
+    "experimentalfactors.search(\"single-cell rna seq\").head(3)"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "8fb26b92",
    "metadata": {},
    "source": [
     "By default, search also covers synonyms:"
@@ -206,14 +232,34 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "59231a84",
    "metadata": {},
    "outputs": [],
    "source": [
-    "public.search(\"single-cell RNA-seq\").head(1)"
+    "experimentalfactors.search(\"single-cell RNA-seq\").head(3)"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "66909e3c",
+   "metadata": {},
+   "source": [
+    "You can turn this off synonym by passing `synonyms_field=None`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34be5e8f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "experimentalfactors.search(\"single-cell RNA-seq\", synonyms_field=None).head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f9a9ab75",
    "metadata": {},
    "source": [
     "Search another field (default is `.name`):"
@@ -222,42 +268,46 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3c3c5dae",
    "metadata": {},
    "outputs": [],
    "source": [
-    "public.search(\n",
+    "experimentalfactors.search(\n",
     "    \"assay which analysis the transcriptome of a biological sample\",\n",
-    "    field=public.definition,\n",
+    "    field=experimentalfactors.definition,\n",
     ").head()"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "e4547027",
    "metadata": {},
    "source": [
-    "## Standardize Experimental Factor identifiers"
+    "## Standardize ExperimentalFactor identifiers"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "3b819b48",
    "metadata": {},
    "source": [
-    "Let us generate a `DataFrame` that stores a number of pathway identifiers, some of which are corrupted:"
+    "Let us generate a `DataFrame` that stores a number of ExperimentalFactor identifiers, some of which corrupted:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "be27d24d",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_orig = pd.DataFrame(\n",
     "    index=[\n",
-    "        \"EFO:0011021\",\n",
-    "        \"EFO:1002050\",\n",
-    "        \"EFO:1002047\",\n",
-    "        \"EFO:1002049\",\n",
-    "        \"This readout does not exist\",\n",
+    "        \"EFO:0011021\"\n",
+    "        \"EFO:1002050\"\n",
+    "        \"EFO:1002047\"\n",
+    "        \"EFO:1002049\"\n",
+    "        \"This experimentalfactor does not exist\",\n",
     "    ]\n",
     ")\n",
     "df_orig"
@@ -265,6 +315,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3336bbb2",
    "metadata": {},
    "source": [
     "We can check whether any of our values are validated against the ontology reference:"
@@ -273,15 +324,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "659baba7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "validated = public.validate(df_orig.index, public.ontology_id)\n",
+    "validated = experimentalfactors.validate(df_orig.index, experimentalfactors.name)\n",
     "df_orig.index[~validated]"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "df30d3af",
    "metadata": {},
    "source": [
     "## Ontology source versions"
@@ -289,6 +342,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e53a0f3b",
    "metadata": {},
    "source": [
     "For any given entity, we can choose from a number of versions:"
@@ -297,6 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2f89d169",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,6 +360,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9e992d6d",
    "metadata": {},
    "source": [
     "When instantiating a Bionty object, we can choose a source or version:"
@@ -313,18 +369,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "id": "59756836",
+   "metadata": {
+    "lines_to_next_cell": 0
+   },
    "outputs": [],
    "source": [
     "public_source = lb.PublicSource.filter(\n",
     "    source=\"efo\", version=\"3.48.0\", organism=\"all\"\n",
     ").one()\n",
-    "public = lb.ExperimentalFactor.public(public_source=public_source)\n",
-    "public"
+    "experimentalfactors= lb.ExperimentalFactor.public(public_source=public_source)\n",
+    "experimentalfactors"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "edd7aa55",
    "metadata": {},
    "source": [
     "The currently used ontologies can be displayed using:"
@@ -333,6 +393,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1d871625",
    "metadata": {
     "tags": [
      "hide-output"
@@ -346,6 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6985ca6c",
    "metadata": {
     "tags": [
      "hide-cell"
@@ -353,8 +415,8 @@
    },
    "outputs": [],
    "source": [
-    "!lamin delete --force test-experimental-factor\n",
-    "!rm -r test-experimental-factor"
+    "!lamin delete --force test-experimentalfactor\n",
+    "!rm -r test-experimentalfactor"
    ]
   }
  ],
@@ -363,20 +425,8 @@
    "display_name": "lamindb",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 5
 }
