--- a/docs/pathway.ipynb
+++ b/docs/pathway.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "383e8d7b",
    "metadata": {},
    "source": [
     "# Pathway"
@@ -9,6 +10,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0b924741",
    "metadata": {},
    "source": [
     "lamindb provides access to the following public protein ontologies through [lnschema-bionty](https://github.com/laminlabs/lnschema-bionty):\n",
@@ -16,11 +18,12 @@
     "1. [Gene Ontology](https://bioportal.bioontology.org/ontologies/GO)\n",
     "2. [Pathway Ontology](https://bioportal.bioontology.org/ontologies/PW)\n",
     "\n",
-    "Here we show how to access and search pathway ontologies to standardize new data."
+    "Here we show how to access and search Pathway ontologies to standardize new data."
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "89fd4dd5",
    "metadata": {},
    "source": [
     "## Setup"
@@ -29,6 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3ae35a22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,6 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d86c5d08",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,6 +52,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5fc81421",
    "metadata": {},
    "source": [
     "## PublicOntology objects"
@@ -54,23 +60,27 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8ab154dd",
    "metadata": {},
    "source": [
-    "Let us create a public ontology accessor with {meth}`~docs:lnschema_bionty.dev.BioRegistry.public`, which chooses a default public ontology source from {class}`~docs:lnschema_bionty.PublicSource`. It's a [PublicOntology](https://lamin.ai/docs/lnschema_bionty.dev.publicontology) object, which you can think about as a public registry:"
+    "Let us create a public ontology accessor with {meth}`~docs:lnschema_bionty.dev.BioRegistry.public`, which chooses a default public ontology source from {class}`~docs:lnschema_bionty.PublicSource`.\n",
+    "It's a [PublicOntology](https://lamin.ai/docs/lnschema_bionty.dev.publicontology) object, which you can think about as a public registry:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "339f323b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "public = lb.Pathway.public()\n",
-    "public"
+    "pathways = lb.Pathway.public(organism=\"all\")\n",
+    "pathways"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "45ecb9c4",
    "metadata": {},
    "source": [
     "As for registries, you can export the ontology as a `DataFrame`:"
@@ -79,15 +89,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c520088b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = public.df()\n",
+    "df = pathways.df()\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "be748943",
    "metadata": {},
    "source": [
     "Unlike registries, you can also export it as a Pronto object via `public.ontology`."
@@ -95,6 +107,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9d06ae1e",
    "metadata": {},
    "source": [
     "## Look up terms"
@@ -102,6 +115,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6f66b39d",
    "metadata": {},
    "source": [
     "As for registries, terms can be looked up with auto-complete:"
@@ -110,14 +124,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2513eef2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "lookup = public.lookup()"
+    "lookup = pathways.lookup()"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "4ce56fac",
    "metadata": {},
    "source": [
     "The `.` accessor provides normalized terms (lower case, only contains alphanumeric characters and underscores):"
@@ -126,6 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a0a28922",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,6 +151,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "94727bca",
    "metadata": {},
    "source": [
     "To look up the exact original strings, convert the lookup object to dict and use the `[]` accessor:"
@@ -142,6 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8ef9837f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,6 +170,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d68c21ef",
    "metadata": {},
    "source": [
     "By default, the `name` field is used to generate lookup keys. You can specify another field to look up:"
@@ -159,15 +179,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "283f476f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "lookup = public.lookup(public.ontology_id)"
+    "lookup = pathways.lookup(pathways.ontology_id)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "fe24c2db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,6 +198,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "504f1eee",
    "metadata": {},
    "source": [
     "## Search terms"
@@ -183,6 +206,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7012298f",
    "metadata": {},
    "source": [
     "Search behaves in the same way as it does for registries:"
@@ -191,14 +215,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "30f44c99",
    "metadata": {},
    "outputs": [],
    "source": [
-    "public.search(\"acetyl coa assimilation\").head(3)"
+    "pathways.search(\"acetyl coa assimilation\").head(3)"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "d541be65",
    "metadata": {},
    "source": [
     "By default, search also covers synonyms:"
@@ -207,14 +233,34 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "66f4288e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "public.search(\"acetyl-CoA catabolism\").head(1)"
+    "pathways.search(\"acetyl-CoA catabolism\").head(3)"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "84c7a97a",
+   "metadata": {},
+   "source": [
+    "You can turn this off synonym by passing `synonyms_field=None`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08991174",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pathways.search(\"acetyl-CoA catabolism\", synonyms_field=None).head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cfd2e01d",
    "metadata": {},
    "source": [
     "Search another field (default is `.name`):"
@@ -223,42 +269,45 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2778d8c3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "public.search(\n",
-    "    \"Chemical reactions and pathways resulting in the breakdown of Cinnamic Acid,\"\n",
-    "    \" 3-Phenyl-2-Propenoic Acid.\",\n",
-    "    field=public.definition,\n",
+    "pathways.search(\n",
+    "    \"Chemical reactions and pathways resulting in the breakdown of Cinnamic Acid,3-Phenyl-2-Propenoic Acid.\",\n",
+    "    field=pathways.definition,\n",
     ").head()"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "a9b337ae",
    "metadata": {},
    "source": [
-    "## Standardize pathway identifiers"
+    "## Standardize Pathway identifiers"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "333d72a9",
    "metadata": {},
    "source": [
-    "Let us generate a `DataFrame` that stores a number of pathway identifiers, some of which are corrupted:"
+    "Let us generate a `DataFrame` that stores a number of Pathway identifiers, some of which corrupted:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "872de00a",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_orig = pd.DataFrame(\n",
     "    index=[\n",
-    "        \"GO:1905210\",\n",
-    "        \"GO:1905211\",\n",
-    "        \"GO:1905212\",\n",
-    "        \"GO:1905208\",\n",
+    "        \"GO:1905210\"\n",
+    "        \"GO:1905211\"\n",
+    "        \"GO:1905212\"\n",
+    "        \"GO:1905208\"\n",
     "        \"This pathway does not exist\",\n",
     "    ]\n",
     ")\n",
@@ -267,6 +316,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e0a91869",
    "metadata": {},
    "source": [
     "We can check whether any of our values are validated against the ontology reference:"
@@ -275,15 +325,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f4e5a9b8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "validated = public.validate(df_orig.index, public.ontology_id)\n",
+    "validated = pathways.validate(df_orig.index, pathways.name)\n",
     "df_orig.index[~validated]"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "a41be011",
    "metadata": {},
    "source": [
     "## Ontology source versions"
@@ -291,6 +343,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e8f72fc6",
    "metadata": {},
    "source": [
     "For any given entity, we can choose from a number of versions:"
@@ -299,6 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1c905a17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,6 +361,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c87d4856",
    "metadata": {},
    "source": [
     "When instantiating a Bionty object, we can choose a source or version:"
@@ -315,18 +370,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "id": "d8a94019",
+   "metadata": {
+    "lines_to_next_cell": 0
+   },
    "outputs": [],
    "source": [
     "public_source = lb.PublicSource.filter(\n",
     "    source=\"go\", version=\"2023-05-10\", organism=\"all\"\n",
     ").one()\n",
-    "public = lb.Pathway.public(public_source=public_source)\n",
-    "public"
+    "pathways= lb.Pathway.public(public_source=public_source)\n",
+    "pathways"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "7aca01c5",
    "metadata": {},
    "source": [
     "The currently used ontologies can be displayed using:"
@@ -335,6 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "317965f6",
    "metadata": {
     "tags": [
      "hide-output"
@@ -348,6 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8fad0c73",
    "metadata": {
     "tags": [
      "hide-cell"
@@ -365,20 +426,8 @@
    "display_name": "lamindb",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 5
 }
