--- a/docs/tissue.ipynb
+++ b/docs/tissue.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "179465cc",
    "metadata": {},
    "source": [
     "# Tissue"
@@ -9,17 +10,19 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9858d26e",
    "metadata": {},
    "source": [
     "lamindb provides access to the following public protein ontologies through [lnschema-bionty](https://github.com/laminlabs/lnschema-bionty):\n",
     "\n",
     "1. [Uberon](http://obophenotype.github.io/uberon)\n",
     "\n",
-    "Here we show how to access and search tissue ontologies to standardize new data."
+    "Here we show how to access and search Tissue ontologies to standardize new data."
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "22c2f744",
    "metadata": {},
    "source": [
     "## Setup"
@@ -28,6 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6e2f4392",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,6 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "fe65778d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,6 +51,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9aa6f9a7",
    "metadata": {},
    "source": [
     "## PublicOntology objects"
@@ -53,23 +59,27 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1c97f503",
    "metadata": {},
    "source": [
-    "Let us create a public ontology accessor with {meth}`~docs:lnschema_bionty.dev.BioRegistry.public`, which chooses a default public ontology source from {class}`~docs:lnschema_bionty.PublicSource`. It's a [PublicOntology](https://lamin.ai/docs/lnschema_bionty.dev.publicontology) object, which you can think about as a public registry:"
+    "Let us create a public ontology accessor with {meth}`~docs:lnschema_bionty.dev.BioRegistry.public`, which chooses a default public ontology source from {class}`~docs:lnschema_bionty.PublicSource`.\n",
+    "It's a [PublicOntology](https://lamin.ai/docs/lnschema_bionty.dev.publicontology) object, which you can think about as a public registry:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "cf45f1a4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "public = lb.Tissue.public()\n",
-    "public"
+    "tissues = lb.Tissue.public(organism=\"all\")\n",
+    "tissues"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "59c7cc34",
    "metadata": {},
    "source": [
     "As for registries, you can export the ontology as a `DataFrame`:"
@@ -78,15 +88,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d11f242b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = public.df()\n",
+    "df = tissues.df()\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "e9159c6a",
    "metadata": {},
    "source": [
     "Unlike registries, you can also export it as a Pronto object via `public.ontology`."
@@ -94,6 +106,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "329d6a3d",
    "metadata": {},
    "source": [
     "## Look up terms"
@@ -101,6 +114,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7de9b9c1",
    "metadata": {},
    "source": [
     "As for registries, terms can be looked up with auto-complete:"
@@ -109,14 +123,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c4aa8221",
    "metadata": {},
    "outputs": [],
    "source": [
-    "lookup = public.lookup()"
+    "lookup = tissues.lookup()"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "47a0e93d",
    "metadata": {},
    "source": [
     "The `.` accessor provides normalized terms (lower case, only contains alphanumeric characters and underscores):"
@@ -125,6 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1fc393be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,6 +150,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "684063a6",
    "metadata": {},
    "source": [
     "To look up the exact original strings, convert the lookup object to dict and use the `[]` accessor:"
@@ -141,6 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "39a25be6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,6 +169,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "eca5ccbe",
    "metadata": {},
    "source": [
     "By default, the `name` field is used to generate lookup keys. You can specify another field to look up:"
@@ -158,22 +178,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b66d4232",
    "metadata": {},
    "outputs": [],
    "source": [
-    "lookup = public.lookup(public.ontology_id)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "If multiple entries are matched, they are returned as a list:"
+    "lookup = tissues.lookup(tissues.ontology_id)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "cb95e085",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,6 +197,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3440f5d5",
    "metadata": {},
    "source": [
     "## Search terms"
@@ -189,6 +205,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "64261a42",
    "metadata": {},
    "source": [
     "Search behaves in the same way as it does for registries:"
@@ -197,14 +214,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "dfdcd625",
    "metadata": {},
    "outputs": [],
    "source": [
-    "public.search(\"alveolus lung\").head(3)"
+    "tissues.search(\"alveolus lung\").head(3)"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "cb45d005",
    "metadata": {},
    "source": [
     "By default, search also covers synonyms:"
@@ -213,14 +232,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e46d9761",
    "metadata": {},
    "outputs": [],
    "source": [
-    "public.search(\"nasal sac\").head(3)"
+    "tissues.search(\"nasal sac\").head(3)"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "d53c6286",
    "metadata": {},
    "source": [
     "You can turn this off synonym by passing `synonyms_field=None`:"
@@ -229,14 +250,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d4490fd7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "public.search(\"nose\", synonyms_field=None).head(3)"
+    "tissues.search(\"nasal sac\", synonyms_field=None).head(3)"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "90340b70",
    "metadata": {},
    "source": [
     "Search another field (default is `.name`):"
@@ -245,38 +268,45 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "073e4be3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "public.search(\"alveolus in the lung\", field=public.definition).head()"
+    "tissues.search(\n",
+    "    \"alveolus in the lung\",\n",
+    "    field=tissues.definition,\n",
+    ").head()"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "7f48bd02",
    "metadata": {},
    "source": [
-    "## Standardize tissue identifiers"
+    "## Standardize Tissue identifiers"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "c9b0f133",
    "metadata": {},
    "source": [
-    "Let us generate a `DataFrame` that stores a number of tissue identifiers, some of which corrupted:"
+    "Let us generate a `DataFrame` that stores a number of Tissue identifiers, some of which corrupted:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "94165290",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_orig = pd.DataFrame(\n",
     "    index=[\n",
-    "        \"UBERON:0000000\",\n",
-    "        \"UBERON:0000005\",\n",
-    "        \"UBERON:8600001\",\n",
-    "        \"UBERON:8600002\",\n",
+    "        \"UBERON:0000000\"\n",
+    "        \"UBERON:0000005\"\n",
+    "        \"UBERON:0000001\"\n",
+    "        \"UBERON:0000002\"\n",
     "        \"This tissue does not exist\",\n",
     "    ]\n",
     ")\n",
@@ -285,6 +315,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ca68c310",
    "metadata": {},
    "source": [
     "We can check whether any of our values are validated against the ontology reference:"
@@ -293,15 +324,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "28630d71",
    "metadata": {},
    "outputs": [],
    "source": [
-    "validated = public.validate(df_orig.index, public.ontology_id)\n",
+    "validated = tissues.validate(df_orig.index, tissues.name)\n",
     "df_orig.index[~validated]"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "4dc76580",
    "metadata": {},
    "source": [
     "## Ontology source versions"
@@ -309,6 +342,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "db408b48",
    "metadata": {},
    "source": [
     "For any given entity, we can choose from a number of versions:"
@@ -317,6 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4191d90e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,6 +360,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2bd3cb76",
    "metadata": {},
    "source": [
     "When instantiating a Bionty object, we can choose a source or version:"
@@ -333,18 +369,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "id": "62ea0b49",
+   "metadata": {
+    "lines_to_next_cell": 0
+   },
    "outputs": [],
    "source": [
     "public_source = lb.PublicSource.filter(\n",
     "    source=\"uberon\", version=\"2023-04-19\", organism=\"all\"\n",
     ").one()\n",
-    "public = lb.Tissue.public(public_source=public_source)\n",
-    "public"
+    "tissues= lb.Tissue.public(public_source=public_source)\n",
+    "tissues"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "92315186",
    "metadata": {},
    "source": [
     "The currently used ontologies can be displayed using:"
@@ -353,6 +393,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3ba1e63a",
    "metadata": {
     "tags": [
      "hide-output"
@@ -366,6 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "58b7ac7f",
    "metadata": {
     "tags": [
      "hide-cell"
@@ -383,20 +425,8 @@
    "display_name": "lamindb",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 5
 }
